         patch #3258533) (Sergio Baldovi).
20110501 man/fuse.1: Fix typo (AY-3-8192 -> AY-3-8912) (Stuart).
20110501 ChangeLog,README,man/fuse.1: Fix typos (Stuart).
20110501 sound.c: enable SpecDrum on both channels when using stereo (Stuart).
20110502 configure.in: remove unneeded AM_SUBST_NOTMAKE macro as it doesn't get
         along with older autotools (patch #3295662) (thanks, Tomáš Franke)
         (Sergio Baldoví)
20110504 tape.c: fix warnings.
20110505 memory.[ch],peripherals/ula.c: first bits of general memory page
         sizing.
20110506 configure.in: fix build for mingw+msys broken in revision 4399 (more
         from bug #3295295) (Sergio Baldoví)
20110508 memory.[ch],machine.h,machines/spec48.c,spectrum.h,z80/z80_macros.h:
         base 48K Spectrum working with a page size of 4Kb.
20110509 machine.c,machines/{spec128.c,spec48.c},memory.[ch]: get 128K machine
         working working with 8Kb pages again.
20110509 machine.[ch],machines/{pentagon1024.c,pentagon512.c,pentagon.c,
         scorpion.c,spec128.c,spec16.c,spec48.c,spec48_ntsc.c,specplus2a.c,
         specplus2.c,specplus3.c,specplus3e.c,spec_se.c,tc2048.c,tc2068.c,
         ts2068.c},memory.[ch], peripherals/{disk/beta.c,disciple.c,opus.c,
         plusd.c},if1.c,if2.c,speccyboot.c}: get 128K machine working with 4Kb
         pages.
20110509 machines/machines_periph.c,peripherals/ay.c,periph.h: reading from
         port 0xbffd on +2A/+3 was lost in peripheral refactoring (thanks,
         fusetest).
20110510 machines/specplus3.c: get +3 to work with a page size of 4Kb.
20110511 machines/spec16.c: get 16K Spectrum working with a page size of 4Kb.
20110515 machines/tc2048.c,memory.h,peripherals/scld.[ch]: get TC2048 working
         with a page size of 4Kb.
20110515 memory.h: back out accidental commit of page size change.
20110515 scld.c: use right port number when restoring SCLD state from snapshot
         (makes no functional difference as we ignore the port number anyway).