@@ -44,8 +44,8 @@
 
 static int tc2068_reset( void );
 
-libspectrum_byte *fake_bank;
-memory_page fake_mapping;
+memory_page tc2068_empty_mapping[MEMORY_PAGES_IN_8K];
+static int empty_mapping_allocated = 0;
 
 libspectrum_byte
 tc2068_ay_registerport_read( libspectrum_word port, int *attached )
@@ -81,6 +81,28 @@ tc2068_ay_dataport_read( libspectrum_word port, int *attached )
   }
 }
 
+static void
+ensure_empty_mapping( void )
+{
+  int i;
+
+  if( empty_mapping_allocated ) return;
+
+  libspectrum_byte *empty_chunk = memory_pool_allocate_persistent( 0x2000, 1 );
+  memset( empty_chunk, 0xff, 0x2000 );
+
+  for( i = 0; i < MEMORY_PAGES_IN_8K; i++ ) {
+    memory_page *page = &tc2068_empty_mapping[i];
+    page->page = empty_chunk + i * MEMORY_PAGE_SIZE;
+    page->offset = i * MEMORY_PAGE_SIZE;
+    page->writable = 0;
+    page->contended = 0;
+    page->source = memory_source_none;
+  }
+
+  empty_mapping_allocated = 1;
+}
+
 int
 tc2068_init( fuse_machine_info *machine )
 {
@@ -94,17 +116,7 @@ tc2068_init( fuse_machine_info *machine )
   machine->ram.contend_delay	     = spectrum_contend_delay_65432100;
   machine->ram.contend_delay_no_mreq = spectrum_contend_delay_65432100;
 
-  if( !fake_bank ) {
-    fake_bank = memory_pool_allocate_persistent( MEMORY_PAGE_SIZE, 1 );
-
-    memset( fake_bank, 0xff, MEMORY_PAGE_SIZE );
-
-    fake_mapping.page = fake_bank;
-    fake_mapping.writable = 0;
-    fake_mapping.contended = 0;
-    fake_mapping.source = memory_source_none;
-    fake_mapping.offset = 0x0000;
-  }
+  ensure_empty_mapping();
 
   machine->unattached_port = spectrum_unattached_port_none;
 
@@ -118,7 +130,7 @@ tc2068_init( fuse_machine_info *machine )
 static int
 tc2068_reset( void )
 {
-  size_t i;
+  size_t i, j;
   int error;
 
   error = machine_load_rom( 0, settings_current.rom_tc2068_0,
@@ -132,17 +144,22 @@ tc2068_reset( void )
   machines_periph_timex();
   periph_update();
 
-  for( i = 0; i < 8; i++ ) {
+  for( i = 0; i < 8; i++ )
+    for( j = 0; j < MEMORY_PAGES_IN_8K; j++ ) {
+      memory_page *dock_page, *exrom_page;
+      
+      dock_page = &timex_dock[i * MEMORY_PAGES_IN_8K + j];
+      *dock_page = tc2068_empty_mapping[j];
+      dock_page->page_num = i;
 
-    timex_dock[i] = fake_mapping;
-    timex_dock[i].page_num = i;
+      exrom_page = &timex_exrom[i * MEMORY_PAGES_IN_8K + j];
+      *exrom_page = memory_map_rom[MEMORY_PAGES_IN_16K + j];
+      exrom_page->page_num = i;
+    }
+
+  for( i = 0; i < MEMORY_PAGES_IN_64K; i++ ) {
     memory_map_dock[i] = &timex_dock[i];
-
-    timex_exrom[i] = memory_map_rom[2];
-    timex_exrom[i].source = memory_source_exrom;
-    timex_exrom[i].page_num = i;
     memory_map_exrom[i] = &timex_exrom[i];
-
   }
 
   error = dck_reset();
