@@ -79,6 +79,9 @@ typedef struct memory_page {
 /* The number of memory pages in 16K */
 #define MEMORY_PAGES_IN_16K ( 1 << ( 14 - MEMORY_PAGE_SIZE_LOGARITHM ) )
 
+/* The number of memory pages in 8K */
+#define MEMORY_PAGES_IN_8K ( 1 << ( 13 - MEMORY_PAGE_SIZE_LOGARITHM ) )
+
 /* Each RAM chunk accessible by the Z80 */
 extern memory_page memory_map_read[MEMORY_PAGES_IN_64K];
 extern memory_page memory_map_write[MEMORY_PAGES_IN_64K];
