@@ -3653,3 +3653,5 @@
 20110515 memory.h: back out accidental commit of page size change.
 20110515 scld.c: use right port number when restoring SCLD state from snapshot
          (makes no functional difference as we ignore the port number anyway).
+20110516 machines/{tc2048.c,tc2068.[ch],ts2068.c},memory.h: get TC/TS2068
+         working with 4Kb pages.
